# foundry

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  conductor.json  index.html  package-lock.json  package.json  project.yml  release-please-config.json  setup.sh  tsconfig.json  vite.config.ts
.github/workflows/: deploy-admin.yml  desktop-release.yml  release.yml  validate.yml  windows-package.yml
Foundry.xcodeproj/: project.pbxproj
Foundry/App/: ContentView.swift  FoundryApp.swift
Foundry/Models/: Plugin.swift  (+3 more)
FoundryTests/: BuildLoopTests.swift  ClaudeCodeServiceTests.swift  PromptContractTests.swift
dashboard/: .dev.vars  .env.local.example  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  wrangler.toml
docs/: design-system.md  desktop-releases.md  marketing-strategy.md  userflow.md
foundry-kit/: SKILL.md
landing/: package-lock.json  package.json
scripts/: generate-updater-manifest.mjs  prepare-tauri-signing-key.mjs
src/: App.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  dependencies.rs  filesystem.rs  generation.rs  mod.rs  onboarding.rs  plugins.rs  settings.rs  telemetry.rs
src-tauri/src/models/: agent.rs  config.rs  mod.rs  plugin.rs  telemetry.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src-tauri/src/services/: agent_service.rs  auth_service.rs  build_directory_cleaner.rs  build_environment.rs  build_runner.rs  claude_code_service.rs  codex_service.rs  dependency_checker.rs  foundry_paths.rs  generation_pipeline.rs  mod.rs  model_catalog.rs  onboarding.rs  plugin_manager.rs  project_assembler.rs  telemetry_service.rs
supabase/: config.toml
(+333 files in other folders)
